--- a/release-notes.html
+++ b/release-notes.html
@@ -32,6 +32,10 @@
       <div class="row">
         <div class="span9" id="main">
           
+<h3><a name="0-0-6-July-6-2017" class="anchor" href="#0-0-6-July-6-2017">0.0.6 - July 6 2017</a></h3>
+<ul>
+<li>Switches to built-in Result</li>
+</ul>
 <h3><a name="0-0-5-May-10-2017" class="anchor" href="#0-0-5-May-10-2017">0.0.5 - May 10 2017</a></h3>
 <ul>
 <li>Removes FSharp.Core dependency</li>
